@@ -803,24 +803,23 @@ local SOCKET connect_via_ip (struct sockaddr * addr, int addrlen,
   if (sock_errno_is(EINPROGRESS) || sock_errno_is(EWOULDBLOCK)) {
     var struct timeval *tvp = (struct timeval*)timeout;
     if ((tvp == NULL) || (tvp->tv_sec != 0) || (tvp->tv_usec != 0)) { # wait
+     var int ret = 0;
      #if defined(WIN32_NATIVE)
-      if (!interruptible_socket_wait(fd,socket_wait_write,tvp))
-        goto timeout;
+      ret = interruptible_socket_wait(fd,socket_wait_write,tvp);
      #else
      restart_select:
       var fd_set handle_set;
       FD_ZERO(&handle_set); FD_SET(fd,&handle_set);
-      var int ret = select(FD_SETSIZE,NULL,&handle_set,NULL,tvp);
+      ret = select(FD_SETSIZE,NULL,&handle_set,NULL,tvp);
       if (ret < 0) {
         if (sock_errno_is(EINTR)) goto restart_select;
         saving_sock_errno(CLOSESOCKET(fd)); return INVALID_SOCKET;
       }
-      if (ret == 0) {
-       timeout:
-        CLOSESOCKET(fd); sock_set_errno(ETIMEDOUT);
-        return INVALID_SOCKET;
-      }
      #endif
+     if (ret == 0) {
+       CLOSESOCKET(fd); sock_set_errno(ETIMEDOUT);
+       return INVALID_SOCKET;
+     }
     }
     { # connected - restore blocking IO
       var int non_blocking_io = 0;
