@@ -101,7 +101,11 @@
 # Locale definition function
   #include <locale.h>
   extern_C char *setlocale (int category, const char *locale);
+#ifdef _MSC_VER
+  #define HAVE_LC_MESSAGES 0
+#else # place appropriate checks here
   #define HAVE_LC_MESSAGES 1
+#endif
 # used by spvw_ctype.d
 
 # Character set conversion
